src/objects/PANG_Request__c.object
<CustomObject>
    <fields>
        <fullName>Vendor_Technical_Contact_Details__c</fullName>
        <inlineHelpText>Enter technical contact name, email, and telephone number</inlineHelpText>
        <label>Vendor Technical Contact Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_Makes_It_Unique__c</fullName>
        <label>What Makes It Unique</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Will_Self_Load__c</fullName>
        <label>Will Self Load</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Workspace__c</fullName>
        <label>Workspace</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workstream_Deliverables__c</fullName>
        <label>Workstream Deliverables</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Workstream_Objectives__c</fullName>
        <label>Workstream Objectives</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Workstream_Problem_Statement__c</fullName>
        <label>Workstream Problem Statement</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <label>RWE Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Requestor__c</columns>
        <columns>Request_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Proposed_Due_Date__c</columns>
        <columns>Planned_Date_Completed__c</columns>
        <columns>Date_Completed__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_EXPERT_Request</fullName>
        <columns>NAME</columns>
        <columns>Requestor__c</columns>
        <columns>Study_Alias_Project_ID__c</columns>
        <columns>Related_Project__c</columns>
        <columns>Request_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>PANG_Request__c.EXPERT_or_ACT_Consultation,PANG_Request__c.EXPERT_Workstream,PANG_Request__c.EXPERT_Review,PANG_Request__c.EXPERT_Exception</value>
        </filters>
        <label>All EXPERT Request</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Created_Today</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Request_Status__c</columns>
        <columns>Request_Sub_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Proposed_Due_Date__c</columns>
        <columns>Planned_Date_Completed__c</columns>
        <columns>Date_Completed__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Created Today</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Datamart_Scientist</fullName>
        <columns>NAME</columns>
        <columns>Request_Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Request_Sub_Status__c</columns>
        <columns>Date_Submitted__c</columns>
        <columns>Date_Accepted__c</columns>
        <columns>Date_In_Progress__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Queue</filterScope>
        <label>Datamart Scientist</label>
        <language>en_US</language>
        <queue>PANG_QUE_Datamart_Scientist</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Active_Requests</fullName>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Request_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Related_Project__c</columns>
        <columns>Request_Type__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Request_Status__c</field>
            <operation>equals</operation>
            <value>New,Accepted,In Process</value>
        </filters>
        <label>My Active Requests</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Requests</fullName>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>RECORDTYPE</columns>
        <columns>Related_Project__c</columns>
        <columns>Request_Type__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Requests</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Responsibilities</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Request_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Related_Project__c</columns>
        <columns>Date_Submitted__c</columns>
        <filterScope>Everything</filterScope>
        <label>My Responsibilities</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Oncology_requests</fullName>
        <columns>IMPACT_BoB_ID__c</columns>
        <columns>Priority__c</columns>
        <columns>NAME</columns>
        <columns>Related_Project__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Data_Asset__c</columns>
        <columns>Molecule_multi__c</columns>
        <columns>Planned_Date_Completed__c</columns>
        <columns>Primary_Disease_State__c</columns>
        <columns>Primary_Therapeutic_Area__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Therapeutic_BU_PE__c</field>
            <operation>equals</operation>
            <value>Oncology</value>
        </filters>
        <label>Oncology requests</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Queue_Data_Sourcing</fullName>
        <columns>NAME</columns>
        <columns>Request_Status__c</columns>
        <columns>Request_Sub_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Proposed_Due_Date__c</columns>
        <columns>Planned_Date_Completed__c</columns>
        <columns>Date_Completed__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>Queue - Data Sourcing</label>
        <language>en_US</language>
        <queue>PANG_QUE_Data_Sourcing</queue>
    </listViews>
    <listViews>
        <fullName>Queue_Datamart_Scientist</fullName>
        <columns>NAME</columns>
        <columns>Request_Status__c</columns>
        <columns>Request_Sub_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Proposed_Due_Date__c</columns>
        <columns>Planned_Date_Completed__c</columns>
        <columns>Date_Completed__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>Queue - Datamart Scientist</label>
        <language>en_US</language>
        <queue>PANG_QUE_Datamart_Scientist</queue>
    </listViews>
    <listViews>
        <fullName>Queue_EXPERT</fullName>
        <columns>NAME</columns>
        <columns>Request_Status__c</columns>
        <columns>Request_Sub_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Proposed_Due_Date__c</columns>
        <columns>Planned_Date_Completed__c</columns>
        <columns>Date_Completed__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>Queue - EXPERT</label>
        <language>en_US</language>
        <queue>PANG_QUE_EXPERT</queue>
    </listViews>
    <listViews>
        <fullName>Queue_RWD_Analysis</fullName>
        <columns>NAME</columns>
        <columns>Request_Status__c</columns>
        <columns>Request_Sub_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Proposed_Due_Date__c</columns>
        <columns>Planned_Date_Completed__c</columns>
        <columns>Date_Completed__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>Queue - RWD Analysis</label>
        <language>en_US</language>
        <queue>PANG_QUE_RWD_Analysis</queue>
    </listViews>
    <listViews>
        <fullName>Queue_RWD_Analysis_GPS</fullName>
        <columns>NAME</columns>
        <columns>Request_Status__c</columns>
        <columns>Request_Sub_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Proposed_Due_Date__c</columns>
        <columns>Planned_Date_Completed__c</columns>
        <columns>Date_Completed__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>Queue - RWD Analysis GPS</label>
        <language>en_US</language>
        <queue>PANG_QUE_RWD_Analysis_GPS</queue>
    </listViews>
    <listViews>
        <fullName>Queue_RWD_Operations</fullName>
        <columns>NAME</columns>
        <columns>Request_Status__c</columns>
        <columns>Request_Sub_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Proposed_Due_Date__c</columns>
        <columns>Planned_Date_Completed__c</columns>
        <columns>Date_Completed__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>Queue - RWD Operations</label>
        <language>en_US</language>
        <queue>PANG_QUE_RWD_Operations</queue>
    </listViews>
    <listViews>
        <fullName>Queue_RWD_Partnership_Exploration</fullName>
        <columns>NAME</columns>
        <columns>Request_Status__c</columns>
        <columns>Request_Sub_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Proposed_Due_Date__c</columns>
        <columns>Planned_Date_Completed__c</columns>
        <columns>Date_Completed__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>Queue - RWD Partnership Explortation</label>
        <language>en_US</language>
        <queue>PANG_QUE_RWE_Parternship_Exploration</queue>
    </listViews>
    <nameField>
        <label>Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RWE Requests</pluralLabel>
    <recordTypes>
        <fullName>Data_Sourcing</fullName>
        <active>true</active>
        <description>Provides working knowledge of available data resources that could support research question and assessment of potential new data sources.</description>
        <label>Data Sourcing</label>
    </recordTypes>
    <recordTypes>
        <fullName>Datamart_Scientific_Consultation</fullName>
        <active>true</active>
        <description>Provides scientific data knowledge to enable study design and execution (includes contributing to protocols/SAP, requirements development and interpretation of results)</description>
        <label>Datamart Scientific Consultation</label>
    </recordTypes>
    <recordTypes>
        <fullName>EXPERT_Exception</fullName>
        <active>true</active>
        <description>This MQS required tool is used to document the rationale for not accepting all key comments during an EXPERT review or to identify protocol amendments that do not require EXPERT review.</description>
        <label>EXPERT Exception</label>
    </recordTypes>
    <recordTypes>
        <fullName>EXPERT_Review</fullName>
        <active>true</active>
        <description>Mandatory EXPERT Review service provides reviews of study designs and scientifically evaluates approaches for validity</description>
        <label>EXPERT Review</label>
    </recordTypes>
    <recordTypes>
        <fullName>EXPERT_Workstream</fullName>
        <active>true</active>
        <description>Submit a proposed workstream to research new methods &amp; analytic capabilities to address gaps</description>
        <label>EXPERT Workstream</label>
    </recordTypes>
    <recordTypes>
        <fullName>EXPERT_or_ACT_Consultation</fullName>
        <active>true</active>
        <description>Consultation request for EXPERT or ACT advice and expertise on study ideas, the right study design, appropriate outcomes and their measurement, analytic methods, scientific implications, etc.</description>
        <label>EXPERT or ACT Consultation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internal_Real_World_Data_Access</fullName>
        <active>true</active>
        <description>Provides secure access to data sets and tools to perform analyses</description>
        <label>Internal Real World Data Access</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internal_Real_World_Data_Analysis</fullName>
        <active>true</active>
        <description>Provides data analysis skills and expertise to assist requestors in executing their studies</description>
        <label>Internal Real World Data Analysis</label>
    </recordTypes>
    <recordTypes>
        <fullName>RWD_Technical_AssessmentorEvaluation</fullName>
        <active>true</active>
        <description>Provides technical assessment or evaluation of potential data assets to determining the feasibility of acquiring or using a particular data set</description>
        <label>RWD Technical Assessment or Evaluation</label>
    </recordTypes>
    <recordTypes>
        <fullName>RWE_Partnership_Exploration</fullName>
        <active>true</active>
        <description>Initiate the exploration of a new RWE partnership between Lilly and an external organization</description>
        <label>RWE Partnership Exploration</label>
    </recordTypes>
    <recordTypes>
        <fullName>RWE_Strategic_Consultation</fullName>
        <active>true</active>
        <description>(NEW) Consultation request to provide clarifying RWE questions regarding data sources available, best practice methodology and research plans, etc.</description>
        <label>RWE Strategic Consultation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Real_World_Data_Load</fullName>
        <active>true</active>
        <description>Provides data loading  new database or a refresh of an existing database to make available within Lilly system(s) in the specified usable format(s)</description>
        <label>Real World Data Load</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>PANG_Valid_Req_Archive</fullName>
        <active>true</active>
        <errorConditionFormula>AND(PRIORVALUE( Request_Sub_Status__c  )=&apos;Archived&apos; ,   ISCHANGED(LastModifiedDate)  )</errorConditionFormula>
        <errorMessage>You cannot modify an Archived Request.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PANG_Valid_Req_Data_Sou_RWE_Str_Data_Sci</fullName>
        <active>true</active>
        <errorConditionFormula>AND( AND( ISPICKVAL(Request_Status__c,&apos;Closed&apos; )  ,  OR(RecordType.DeveloperName = &apos;Data_Sourcing&apos;,RecordType.DeveloperName = &apos;Datamart_Scientific_Consultation&apos;,RecordType.DeveloperName = &apos;RWE_Strategic_Consultation&apos;))  , OR( ISBLANK( Name ) , ISBLANK( Requestor__c ),   ISBLANK(Text(  Primary_Therapeutic_Area__c ) ),  ISBLANK(  Final_Outcome__c  )) )</errorConditionFormula>
        <errorMessage>You must have Requestor, Primary Therapeutic Area, and Final Outcome filled out to close a Request.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PANG_Valid_Req_EXPERT_Exc</fullName>
        <active>true</active>
        <errorConditionFormula>AND( AND( ISPICKVAL(Request_Status__c,&apos;Closed&apos; )  ,  RecordType.DeveloperName = &apos;EXPERT_Exception&apos;)  , OR( ISBLANK( Name ) , ISBLANK( Requestor__c ),   ISBLANK( Rationale_for_Process_Exception__c  ),  ISBLANK(   EXPERT_Exception_Approver__c   ), ISBLANK(  Study_Alias_Project_ID__c  )) )</errorConditionFormula>
        <errorMessage>Requestor, Name, Rationale for Process Exception, EXPERT Exception Approver, and Study Alias / Project ID filled in to close a request.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PANG_Valid_Req_EXPERT_Work</fullName>
        <active>true</active>
        <errorConditionFormula>AND( AND( ISPICKVAL(Request_Status__c,&apos;Closed&apos; )  ,  RecordType.DeveloperName = &apos;EXPERT_Workstream&apos;)  , OR( ISBLANK( Name ) , ISBLANK( Requestor__c ),   ISBLANK( Workstream_Problem_Statement__c  ), ISBLANK(  Workstream_Deliverables__c ), ISBLANK(  Final_Outcome__c  )) )</errorConditionFormula>
        <errorMessage>Request Name, Requestor, Workstream Deliverables, Workstream Problem Statement, and Final Outcome  need to be filled in to close a request.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PANG_Valid_Req_EXPERT_or_ACT_Con</fullName>
        <active>true</active>
        <errorConditionFormula>AND( AND( ISPICKVAL(Request_Status__c,&apos;Closed&apos; )  ,  RecordType.DeveloperName = &apos;EXPERT_or_ACT_Consultation&apos;)  , OR( ISBLANK( Name ) , ISBLANK( Requestor__c ),   ISBLANK(Text(  Primary_Therapeutic_Area__c ) ),  ISBLANK(  Final_Outcome__c  ),ISBLANK(   Text(Study_Design_Type__c )  )) )</errorConditionFormula>
        <errorMessage>Requestor, Name, Final Outcome, Primary Therapeutic Area, and Study Design needs to be filled in to close a request.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PANG_Valid_Req_Expert_Review</fullName>
        <active>true</active>
        <errorConditionFormula>AND( AND( ISPICKVAL(Request_Status__c,&apos;Closed&apos; )  ,  RecordType.DeveloperName = &apos;EXPERT_Review&apos;)  , OR( ISBLANK( Name ) , ISBLANK( Requestor__c ),   ISBLANK(Text(  Primary_Therapeutic_Area__c ) ),  ISBLANK(Text(  Study_Design_Type__c ) ),  ISBLANK(Text(Requestor_Functional_Area__c )  ), ISBLANK(    Study_Alias_Project_ID__c), ISBLANK(Text(EXPERT_Recommendation__c   ))) )</errorConditionFormula>
        <errorMessage>Request Name, Requestor, Primary Therapeutic Area, Study Design, Requestor Functional area,  Study Alias / Project ID,  and EXPERT Recommendation are needed to b filled in to close a request.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PANG_Valid_Req_Int_Real_World_Data_Acc</fullName>
        <active>true</active>
        <errorConditionFormula>AND( AND( ISPICKVAL(Request_Status__c,&apos;Closed&apos; )  ,  RecordType.DeveloperName = &apos;Internal_Real_World_Data_Access&apos;)  , OR( ISBLANK( Name ) , ISBLANK( Requestor__c ), ISBLANK(Text(  Access_Type__c) ),ISBLANK( Text(Role__c ) ),ISBLANK( Date_Completed__c  ) ,ISBLANK( Text( Completed_Data_Asset_Contract_Review_s__c ) ),ISBLANK( Text( Approval_Status__c )  ), ISBLANK( Access_Location__c  )) )</errorConditionFormula>
        <errorMessage>(Request Name, Requestor, Access Type, Role, Completed Date, Completed Data Asset Contract Reviews, Access Location, and Approval Status must be filled in to close a request.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PANG_Valid_Req_Int_Real_World_Data_Ana</fullName>
        <active>true</active>
        <errorConditionFormula>AND( AND( ISPICKVAL(Request_Status__c,&apos;Closed&apos; )  ,  RecordType.DeveloperName = &apos;Internal_Real_World_Data_Analysis&apos;)  , OR( ISBLANK( Name ) , ISBLANK( Requestor__c ), ISBLANK( Text(Application_of_Deliverable__c ) ),  ISBLANK( Text(Request_Type__c ) ),  ISBLANK(  Final_Outcome__c  )) )</errorConditionFormula>
        <errorMessage>Request Name, Requestor, Application of Delivery, Final Outcome, Request Type must be filled in to close a request.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PANG_Valid_Req_RWD_Tech_Ass_Eva</fullName>
        <active>true</active>
        <errorConditionFormula>AND( AND( ISPICKVAL(Request_Status__c,&apos;Closed&apos; )  ,  RecordType.DeveloperName = &apos;RWD_Technical_AssessmentorEvaluation&apos;)  , OR( ISBLANK( Name ) , ISBLANK( Requestor__c ),  ISBLANK( Validation_Completion_Date__c  )) )</errorConditionFormula>
        <errorMessage>Request Name, or Requestor, Validation Completion Date must be filled in to close a request.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PANG_Valid_Req_Real_World_Data_Load</fullName>
        <active>true</active>
        <errorConditionFormula>AND( AND( ISPICKVAL(Request_Status__c,&apos;Closed&apos; )  ,  RecordType.DeveloperName = &apos;Real_World_Data_Load&apos;)  , OR( ISBLANK( Name ) , ISBLANK( Requestor__c ),   ISBLANK( 
 Data_Asset__c ),  ISBLANK(  Text( Data_Load_Successful__c)  )) )</errorConditionFormula>
        <errorMessage>Request Name, Requestor, Data Asset, Data Load Successful must be filled in to close a request.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PANG_Valid_Req_Sub_Name_Req</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Submitted__c  , OR( ISBLANK( Name ) , ISBLANK( Requestor__c ) ) )</errorConditionFormula>
        <errorMessage>You must have the Request Name and rRequestor filled in to Submit a request.</errorMessage>
    </validationRules>
</CustomObject>